# NBUT_Hero_AIM

./: CMakeLists.txt  INSTALL_WSL.md  readme.md  restart.sh
src/: main.cpp  main.h
src/armor_detector/: CMakeLists.txt
src/armor_detector/include/: ArmorFinder.h  Classifier.h  Detector.h  GreenLightDetector.hpp  Inference.hpp  LightBarFinder.h  NumberClassifier.h  ROI_Accelerator.h  Score.h  TargetChooser.h  Tracker.h  YOLOv10Detector.hpp  number_classifier.hpp  pyboostcvconverter.h
src/armor_detector/src/: ArmorFinder.cpp  CNN.cpp  Classifier.cpp  Detector.cpp  GreenLightDetector.cpp  Inference.cpp  LightBarFinder.cpp  NumberClassifier.cpp  ROI_Accelerator.cpp  Score.cpp  TargetChooser.cpp  Tracker.cpp  YOLOv10Detector.cpp
src/driver/: CMakeLists.txt
src/driver/include/: HikCamera.h  SerialPort.h  VideoCapture.h  VideoSave.h
src/driver/inlude/: GxCamera.h  HikCamera.h  SerialPort.h  VideoCapture.h  VideoSave.h
src/driver/src/: DaHen.cpp  GxCamera.cpp  HikCamera.cpp  Picture.cpp  SerialPort.cpp  Video.cpp  VideoCapture.cpp  VideoSave.cpp
src/pose_estimate/include/: NormalEKF.h  Predictor.h  Predictor_main.h
src/pose_estimate/src/: EulerAngleKF.cpp  Predictor.cpp  Predictor_main.cpp  VehicleTracking.cpp
src/pose_soler/: CMakeLists.txt
src/pose_soler/include/: Bumper.hpp  EulerAngleKF.h  ExtendedKalman.hpp  Kalman.h  NormalEKF.h  OrthogonalBaEdge.hpp  PoseSolver.h  Predictor_main.h  VehicleTracking.h  VertexAB.hpp
src/pose_soler/src/: Kalman.cpp  NormalEKF.cpp  PoseSolver.cpp
src/utils/data/video/: README.md
src/utils/include/: Array.hpp  Config.h  Log.h  Params.h  Thread.h  UDPSender.hpp  newArray.hpp
src/utils/src/: Config.cpp  Log.cpp  Params.cpp  Thread.cpp  UDPSender.cpp  config.cpp
src/utils/tools/: init.json
